@@ -1,3 +1,6 @@
+- gurpmi
+  o notify callers when installation is canceled (#40358)
+
 Version 6.3 - 14 August 2008, Thierry Vignaud
 
 - gurpmi
